# bug-knowledge

./: .env.example  .gitignore  Dockerfile  README.md  deploy-offline.sh  docker-compose.yml  docker-entrypoint.sh  environment.yml  prepare-offline.sh  pyproject.toml  rebuild.sh  requirements.txt  setup  start.sh  stop.sh
deploy/: README.md  bug-knowledge.service  deploy.sh  nginx-bug-knowledge.conf
docs/: config_guide.md  debug流程.puml  deployment_guide.md  offline-deployment.md  知识库时序图.puml  系统结构图.puml
mock/: __main__.py  bug_reports.json  generate_mock_data.py  load_mock_data.py  search_bugs.py
src/: __main__.py  config.py
src/crawler/: __main__.py  config.py  data_integrator.py  gitlab_crawler.py  td_crawler.py
src/features/: code_features.py
src/models/: bug_models.py
src/retrieval/: searcher.py  searcher_manager.py
src/scripts/: migrate_to_sqlite.py
src/search/: searcher.py
src/storage/: __main__.py  database.py  vector_store.py
src/ui/: cli.py  web.py
src/ui/routers/: __init__.py  bug.py
src/ui/static/css/: style.css
src/ui/templates/: add.html  base.html  index.html  search.html
src/utils/: diff_preprocessor.py  http_client.py  log.py
src/vectorization/: vectorizers.py
tests/: search_bugs.py
tests/utils/: data_generator.py  data_loader.py
