[tool.poetry]
name = "bug-knowledge"
version = "0.1.0"
description = "Bug知识库系统"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
annoy = "^1.17.3"
apscheduler = "^3.8.1"
sentence-transformers = "^2.2.2"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 